Minor fixes and switched from URI to URL